--- a/Documentation/web-documentation.tex
+++ b/Documentation/web-documentation.tex
@@ -123,7 +123,7 @@ In the public folder we can find the next directories:
 \lstinputlisting[language=php,label={lst:php_api_structure}]{../config/filterweb/public/forms/account_management/add_shipping_address/index.php}
 
 \newpage
-\subsubsection[Main Class listing]{Class listing}
+\subsubsection[Main Class listing]{Main Class listing}
 
 \begin{flushleft}
     The current main classes created are:
