Twenty-second backup.

--- a/Documentation/web-documentation.tex
+++ b/Documentation/web-documentation.tex
@@ -198,4 +198,19 @@ catch (PDOException $e){
             reliability, making simple generating error messages to the user among working around errors.
         \end{itemize}
     \end{itemize}
+    \begin{itemize}
+        \item mailer
+        \begin{itemize}
+            \item Responsible of sending emails through PHPMailer libraries.
+        \end{itemize}
+    \end{itemize}
+    \begin{itemize}
+        \item mailer\_info
+        \begin{itemize}
+            \item This class is the responsible for formatting the class mailer, containing functions that will generate
+            \item a different message depending on the desired message.
+        \end{itemize}
+    \end{itemize}
+
+
 \end{flushleft}
