First second backup.

--- a/Documentation_bin/docker_documentation.tex
+++ b/Documentation_bin/docker_documentation.tex
@@ -80,7 +80,7 @@
     \subsection[Main Server Docker Configuration]{MainServerDockerConfiguration}\label{subsec:mainserverdockerconfiguration}
     \subsubsection[Main Server Docker-Compose]{Main Server DockerCompose}
     \lstinputlisting[language=Docker-compose,label={lst:MainDockerCompose}]{../docker-compose.yml}
-    \paragraph{docker-compose.yml} that contains the services for the main server.
+%    \paragraph{docker-compose.yml} this file contains the services for the main server.
 
     \newpage
     \begin{flushleft}
