--- a/Documentation_bin/main.tex
+++ b/Documentation_bin/main.tex
@@ -63,6 +63,7 @@
 %\lfoot{\email}
 
 
+\setcounter{tocdepth}{5}
 
 % Document
 \makeindex
@@ -91,13 +92,13 @@
 
     \newpage
 %    Docker configuration
-    \section{Docker Configuration}\label{sec:DockerConfiguration}
+    \section{Docker Documentation}\label{sec:DockerDocumentation}
     \input{docker_documentation}
 
     \newpage
 %    Service Configuration
-    \section{Services Configuration}\label{sec:ServicesConfiguration}
-    \input{services-configuration}
+    \section{Services Documentation}\label{sec:ServicesDocumentation}
+    \input{services-documentation}
 
     \newpage
 %    Webpage Configuration
