Second second backup.

--- a/Documentation_bin/main.tex
+++ b/Documentation_bin/main.tex
@@ -46,6 +46,7 @@
 \usepackage{tikz}
 \usetikzlibrary{patterns}
 \usepackage{bchart}
+\usepackage{wasysym}
 
 
 %Includes
@@ -110,4 +111,13 @@
     \section{Services Deployment}\label{sec:ServiceDeployment}
     \input{services-deployment}
 
+    \newpage
+%    Webgraphy
+    \section{Webgraphy}\label{sec:Webgraphy}
+    \input{webgraphy}
+
+    \newpage
+%    Webgraphy
+    \section{Conclusion}\label{sec:Conclusion}
+    \input{conclusion}
 \end{document}
