Second second backup.

--- a/Documentation_bin/introduction.tex
+++ b/Documentation_bin/introduction.tex
@@ -27,7 +27,7 @@
     \subsection{Keywords}\label{subsec:Keyords}
 
     PHP, PDO, Docker, Docker-compose, Dockerfile, Network, Api, Security, Infrastructure, Web, Nginx, Server, Portainer,
-    Deploy, Swarm, LaTeX, Yaml, JSON, SSL, Certificates, SSH, Key, Users, Passwords, PostgreSQL, Stack, Groups, Shop,
+    Deploy, Swarm, LaTeX, Yaml, JSON, SSL, Certificates, SSH, Key, Users, Passwords, PostgreSQL, Groups, Shop,
     Online, Environment, Backups, Motorisation, Script, Bash, Shell, Git, Markdown, HTML, JavaScript, AJAX, Regex,
     Automation, Postgres, Database, HTTP, HTTPS, Client, Server, Crontab.
 
