--- a/Documentation_bin/main.tex
+++ b/Documentation_bin/main.tex
@@ -112,6 +112,11 @@
     \input{services-deployment}
 
     \newpage
+%    Service deployment
+    \section{Possible improvements}\label{sec:Possible improvements}
+    \input{improvements}
+
+    \newpage
 %    Webgraphy
     \section{Webgraphy}\label{sec:Webgraphy}
     \input{webgraphy}
