Fiveth second backup.

--- a/Documentation_bin/conclusion.tex
+++ b/Documentation_bin/conclusion.tex
@@ -7,7 +7,7 @@
 \end{flushleft}
 \begin{flushleft}
     And meanwhile I certainly can say that accomplished the objective of acquiring a basic understanding, I can also say
-    that I could have pushed a lot more far than it's actual state, which may bue due lack of motivation and lost of
+    that I could have pushed a lot further than it's actual state, which may bue due lack of motivation and lost of
     interest in certain areas.
 \end{flushleft}
 \begin{flushleft}
