Small type fix.

--- a/Documentation_bin/conclusion.tex
+++ b/Documentation_bin/conclusion.tex
@@ -14,3 +14,6 @@
     Even then, probably during the summer will keep it pushing in order to acquire something solid enough to show and
     claim as mine.
 \end{flushleft}
+\begin{flushleft}
+    At least, this will be usable as a reference in case I need to borrow some code or configuration.
+\end{flushleft}
